# cuda-wrappers

./: .gitignore  BMPImage.cpp  BMPImage.h  CMakeLists.txt  CudaWrappers.cu  CudaWrappers.h  DeviceGrid2D.h  Grid2D.h  Stopwatch.h  life.cu  main.cpp  quick_setup.sh  sand.cu
